@@ -1,3 +1,23 @@
 SUBDIRS = torrent
 
 DISTCLEANFILES = *~
+
+EXTRA_DIST= \
+	autogen.sh \
+	algo/algo.h \
+	algo/common.h \
+	algo/common_impl.h \
+	algo/container.h \
+	algo/container_impl.h \
+	algo/internal_impl.h \
+	algo/operation.h \
+	algo/operation_impl.h \
+	algo/use.h \
+	algo/use_impl.h \
+	client/Makefile \
+	client/README \
+	client/display.cc \
+	client/display.h \
+	client/download.cc \
+	client/download.h \
+	client/rtorrent.cc
